solved a problem with the expand button on firefox.

--- a/labman_ud/static/css/style.css
+++ b/labman_ud/static/css/style.css
@@ -6,7 +6,7 @@
 
 @-moz-document url-prefix() { 
     #expand-form-panel {
-        position: fixed;
+        position: absolute;
     }
 }
 
